// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middle-comment.yml - yaml-verify: middle-comment.yml 1`] = `
!!str # comment
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str # comment
hello

`;

exports[`middle-comments.yml - yaml-verify: middle-comments.yml 1`] = `
!!str # comment 1
# comment 2
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str
# comment 1
# comment 2
hello

`;

exports[`true.yml - yaml-verify: true.yml 1`] = `
hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
hello

`;

exports[`verbatim.yml - yaml-verify: verbatim.yml 1`] = `
!<hello> hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!<hello> hello

`;
